<resources>

    <!--CREDIT CARD TYPE TITLE-->
    <string name="credit_card_type_normal">Normal Credit Card Payment</string>
    <string name="credit_card_type_two_clicks">Two Clicks Credit Card Payment</string>
    <string name="credit_card_type_one_click">One Click Credit Card Payment</string>

    <string name="card_click_normal">Normal</string>
    <string name="card_click_two_click">Two Click</string>
    <string name="card_click_one_click">One Click</string>
    <string name="label_credit_card">credit_card</string>

    <!--SECURE TYPE TITLE-->
    <string name="secure_type_enabled">3D Secure Enabled</string>
    <string name="secure_type_disabled">Authentication Disabled</string>
    <string name="secure_type_rba_with_3ds">RBA With 3DS Enabled</string>
    <string name="secure_type_rba_non_3ds">RBA non 3DS Enabled</string>

    <!--ISSUING BANK TITLE-->
    <string name="acquiring_bank_none">No Acquiring Bank</string>
    <string name="acquiring_bank_by_bni">Acquiring Bank by BNI</string>
    <string name="acquiring_bank_by_mandiri">Acquiring Bank by Mandiri</string>
    <string name="acquiring_bank_by_bca">Acquiring Bank by BCA</string>
    <string name="acquiring_bank_by_maybank">Acquiring Bank by Maybank</string>
    <string name="acquiring_bank_by_bri">Acquiring Bank by BRI</string>
    <string name="acquiring_bank_by_cimb">Acquiring Bank by CIMB</string>
    <string name="acquiring_bank_by_mega">Acquiring Bank by Mega</string>


    <string name="bank_bni">BNI</string>
    <string name="bank_mandiri">Mandiri</string>
    <string name="bank_bca">BCA</string>
    <string name="bank_bri">BRI</string>
    <string name="bank_maybank">Maybank</string>
    <string name="bank_cimb">CIMB</string>

    <!--CUSTOM EXPIRY TITLE-->
    <string name="custom_expiry_none">No Custom Expiry</string>
    <string name="custom_expiry_one_minute">One Minute Custom Expiry</string>
    <string name="custom_expiry_one_hour">One Hour Custom Expiry</string>

    <string name="expiry_none">None</string>
    <string name="expiry_one_minute">1 Minute</string>
    <string name="expiry_one_hour">1 Hour</string>

    <!--DEFAULT SAVE CARD TITLE-->
    <string name="default_save_card_enabled">Default Save Card Enabled</string>
    <string name="default_save_card_disabled">Default Save Card Disabled</string>

    <!--PAYMENT CHANNELS OPTION-->
    <string name="payment_channels_show_all">Show All Payment Channels</string>
    <string name="payment_channels_selected">Show Selected Payment Channels</string>
    <string name="payment_channels_selection_show_all">Show All</string>
    <string name="payment_channels_selection_show_selected">Show Selected Only</string>
    <string name="payment_channels_selection_show_selected_format">Show Selected Only - %1$d Channels</string>
    <string name="payment_channels_select_payment_channel">Select Payment Channel</string>

    <!--CUSTOM VA-->
    <string name="custom_permata_va_disabled">Custom Permata VA Number Disabled</string>
    <string name="custom_permata_va_enabled">Custom Permata VA Number Enabled</string>
    <string name="custom_bca_va_disabled">Custom BCA VA Number Disabled</string>
    <string name="custom_bca_va_enabled">Custom BCA VA Number Enabled</string>
    <string name="custom_bni_va_disabled">Custom BNI VA Number Disabled</string>
    <string name="custom_bni_va_enabled">Custom BNI VA Number Enabled</string>

    <string name="custom_va_enabled_format">Enabled - %1$s</string>
    <string name="custom_va_enabled">Enabled</string>
    <string name="custom_va_disabled">Disabled</string>
    <string name="custom_bca_va_hint">Custom BCA VA Number</string>
    <string name="custom_va_hint">Custom VA Number</string>
    <string name="custom_permata_va_error">VA Number must be 10 digits.</string>
    <string name="custom_permata_va_hint">Custom Permata VA Number</string>
    <string name="custom_permata_recipient_hint">Custom Permata Recipient</string>
    <string name="custom_bca_va_enable_title">Enable Custom BCA VA Number</string>
    <string name="custom_permata_va_enable_title">Enable Custom Permata VA Number</string>
    <string name="custom_permata_recipient_enable_title">Enable Custom Permata Recipient</string>
    <string name="format_va_enable_title">Enable Custom %1$s Number</string>
    <string name="custom_va_edit_button">Edit</string>

    <!--SUBCOMPANY-->
    <string name="subcompany_bca_va_disabled">Subcompany for BCA VA Disabled</string>
    <string name="subcompany_bca_va_enabled">Subcompany for BCA VA Enabled</string>
    <string name="subcompany_error_message">Subcompany code must be 5 digits number</string>

    <!--PERMATA VA RECIPIENT-->
    <string name="custom_permata_recipient_disabled">Custom Permata Recipient Disabled</string>
    <string name="custom_permata_recipient_enabled">Custom Permata Recipient Enabled</string>

    <!--PROMO ENABLED TITLE-->
    <string name="default_promo_enabled">Promo Enabled</string>
    <string name="default_promo_disabled">Promo Disabled</string>

    <!--PRE AUTHORIZATION ENABLED TITLE-->
    <string name="pre_auth_enabled">Pre Auth Feature Enabled</string>
    <string name="pre_auth_disabled">Pre Auth Feature Disabled</string>

    <!--AUTO READ SMS TITLE-->
    <string name="auto_read_sms_enabled">Auto Read OTP SMS Enabled</string>
    <string name="auto_read_sms_disabled">Auto Read OTP SMS Disabled</string>

    <!--COLOR THEME TITLE-->
    <string name="default_color_theme">Default Color Theme</string>
    <string name="color_theme_red">Red Color Theme</string>
    <string name="color_theme_green">Green Color Theme</string>
    <string name="color_theme_orange">Orange Color Theme</string>
    <string name="color_theme_black">Black Color Theme</string>
    <string name="color_blue">Default - Blue</string>
    <string name="color_red">Red</string>
    <string name="color_green">Green</string>
    <string name="color_orange">Orange</string>
    <string name="color_black">Black</string>

    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>

    <!--ACTIVITY TITLE-->
    <string name="demo_configuration">Demo Configuration</string>
    <string name="product_details">Product Details</string>
    <string name="order_review">Order Review</string>

    <!--PRODUCT DETAILS-->
    <string name="product_price_sample">Rp 200,000</string>
    <string name="product_name_sample">Midtrans Pillow</string>
    <string name="product_details_sample">Get cozy with our new pillow!</string>
    <string name="product_rating_sample">4.4</string>
    <string name="product_copyright_sample">2012</string>

    <!--ORDER REVIEW-->
    <string name="order_review_total_amount">Total Amount</string>
    <string name="order_review_delivery_address">YOUR DELIVERY ADDRESS</string>
    <string name="order_review_customer_details">CUSTOMER DETAILS</string>
    <string name="order_review_customer_details_name">Budi Utomo</string>
    <string name="order_review_customer_details_hint_name">Full Name</string>
    <string name="order_review_customer_details_email">budi@utomo.com</string>
    <string name="order_review_customer_details_hint_email">Email</string>
    <string name="order_review_customer_details_phone">081808466410</string>
    <string name="order_review_customer_details_hint_phone">Phone Number</string>
    <string name="order_review_delivery_address_sample">Midplaza 2, 4th Floor Jl. Jend. Sudirman Kav.10-11</string>
    <string name="order_review_delivery_address_city_sample">Jakarta</string>
    <string name="order_review_delivery_options">ORDER REVIEW &amp; DELIVERY OPTIONS</string>
    <string name="order_review_quantity">Qty 1</string>
    <string name="order_review_city">City : %1$s</string>
    <string name="order_review_postal_code">Postal Code : %1$s</string>
    <string name="delivery_address_title">Delivery Address</string>
    <string name="delivery_address_save">Update Delivery Address</string>
    <string name="hint_edit_address">Address</string>
    <string name="hint_edit_city">City</string>
    <string name="hint_edit_zip_code">Zipcode</string>
    <string name="hint_edit_country">Country</string>
    <string name="hint_error_zip_code">Zipcode should be 5 digits</string>
    <!--BUTTON-->
    <string name="btn_launch_demo">Launch Demo App</string>
    <string name="btn_buy">Buy</string>
    <string name="btn_pay_20000">Pay Rp 20,000</string>
    <string name="sample_user_id">midtrans.android@yopmail.com</string>
    <string name="sample_user_id2">midtrans.android2@yopmail.com</string>

    <!-- installment -->
    <string name="installment_type_disabled">Installment Disabled</string>
    <string name="installment_bni">BNI</string>
    <string name="installment_mandiri">Mandiri</string>
    <string name="installment_bca">BCA</string>
    <string name="installment_offline">Offline</string>
    <string name="using_bni_installment">BNI Installment</string>
    <string name="using_mandiri_installment">Mandiri Installment</string>
    <string name="using_bca_installment">BCA Installment</string>
    <string name="using_bri_installment">BRI Installment</string>
    <string name="using_cimb_installment">CIMB Installment</string>
    <string name="using_maybank_installment">Maybank Installment</string>
    <string name="installment_required_title">(Required)</string>

    <!-- BNI Point -->
    <string name="bni_point_only_disabled">BNI Point Only Disabled</string>
    <string name="bni_point_only_enabled">BNI Point Only Enabled</string>

    <!-- Mandiri Point -->
    <string name="mandiri_point_only_disabled">Mandiri Fiestapoin Only Disabled</string>
    <string name="mandiri_point_only_enabled">Mandiri Fiestapoin Only Enabled</string>

    <!-- Demo Product List -->
    <string name="midtrans_pillow">Midtrans Pillow</string>
    <string name="midtrans_pillow_1">Midtrans Pillow I</string>
    <string name="midtrans_pillow_2">Midtrans Pillow II</string>
    <string name="price_pillow_1">Rp 200,000</string>
    <string name="midtrans_store">midtrans store</string>

    <!-- Demo Account-->
    <string name="account_name">Budi Utomo</string>
    <string name="account_mycards">My Cards</string>
    <string name="account_details">Account Details</string>
    <string name="account_email">budi@utomo.com</string>
    <string name="user_address">Midplaza 2, 4th Jl. Jendral Sudirman Kav. 10-11, Jakarta - 10220 \n Indonesia</string>
    <string name="account_phone">081808466410</string>
    <string name="my_account">My Account</string>
    <string name="add_new_card_demo">Add New Card</string>

    <string name="save_card_successfully">Save Card Successfully</string>
    <string name="please_wait">Please Wait</string>
    <string name="my_cards">My Cards</string>
    <string name="title_enable_installment">Enable Installment</string>
    <string name="required">Required</string>
    <string name="optional">Optional</string>
    <string name="installment_bri">BRI</string>
    <string name="installment_cimb">CIMB</string>
    <string name="installment_maybank">Maybank</string>
    <string name="save_card">Save Card</string>
    <string name="reset_setting">Reset</string>
    <string name="reset_setting_notification">All Settings are Reset</string>
    <string name="bni_va_title">BNI VA</string>
    <string name="bca_va_title">BCA VA</string>
    <string name="subcompany_bca_va_title">Subcompany BCA VA</string>
    <string name="bank_mega">Mega</string>
    <string name="secure_3ds">3ds</string>
    <string name="enable_rba_3ds">RBA Enabled - Case 3DS</string>
    <string name="enable_rba_non_3ds">RBA Enabled - Case non 3DS</string>
    <string name="enable_3ds">Enable 3ds</string>
    <string name="error_empty">Please fill the field</string>
    <string name="swipe_left">Swipe left to delete saved card</string>
</resources>
