<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="center"
            android:src="@drawable/ic_secure" />

        <com.midtrans.demo.widgets.DemoTextView
            android:id="@+id/title_secure_type"
            style="@style/ConfigItemTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/secure_type_disabled" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/secure_type_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/thirtytwo_dp"
        android:paddingRight="@dimen/thirtytwo_dp"
        android:visibility="gone"
        tools:visibility="visible">

        <com.midtrans.demo.widgets.DemoRadioButton
            android:id="@+id/type_secure_disabled"
            style="@style/CustomRadioButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/eight_dp"
            android:layout_marginStart="@dimen/eight_dp"
            android:checked="true"
            android:gravity="center_vertical"
            android:text="@string/disabled" />

        <com.midtrans.demo.widgets.DemoRadioButton
            android:id="@+id/type_secure_enabled"
            style="@style/CustomRadioButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/eight_dp"
            android:layout_marginStart="@dimen/eight_dp"
            android:gravity="center_vertical"
            android:text="@string/enable_3ds" />

        <com.midtrans.demo.widgets.DemoRadioButton
            android:visibility="visible"
            android:id="@+id/type_secure_rba"
            style="@style/CustomRadioButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/eight_dp"
            android:layout_marginStart="@dimen/eight_dp"
            android:gravity="center_vertical"
            android:text="@string/enable_rba_3ds" />

        <com.midtrans.demo.widgets.DemoRadioButton
            android:visibility="visible"
            android:id="@+id/type_secure_rba_non_3ds"
            style="@style/CustomRadioButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/eight_dp"
            android:layout_marginStart="@dimen/eight_dp"
            android:gravity="center_vertical"
            android:text="@string/enable_rba_non_3ds" />
    </RadioGroup>
</LinearLayout>