<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/ThemeOverlay.AppCompat.ActionBar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/white"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"
            app:title="">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="48dp"
                android:layout_marginRight="48dp">

                <com.midtrans.demo.widgets.DemoTextView
                    android:id="@+id/title"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:text="@string/order_review" />
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/amount_container"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_below="@id/appbar"
        android:background="@color/navy_blue.primary"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/sixteen_dp"
        android:paddingRight="@dimen/sixteen_dp">

        <com.midtrans.demo.widgets.DemoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_review_total_amount"
            android:textColor="@color/white"
            android:textSize="@dimen/primary_text_size"
            android:textStyle="bold" />

        <com.midtrans.demo.widgets.DemoTextView
            android:id="@+id/text_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/product_price_sample"
            android:textColor="@color/white"
            android:textSize="@dimen/header_text_size"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_pay_container"
        android:layout_below="@id/amount_container">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.midtrans.demo.widgets.DemoTextView
                android:id="@+id/title_delivery_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/sixteen_dp"
                android:layout_marginRight="@dimen/sixteen_dp"
                android:paddingBottom="@dimen/eight_dp"
                android:paddingTop="@dimen/eight_dp"
                android:text="@string/order_review_delivery_options"
                android:textSize="10sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/order_review_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_delivery_options"
                android:layout_marginLeft="@dimen/sixteen_dp"
                android:layout_marginRight="@dimen/sixteen_dp">

                <ImageView
                    android:id="@+id/product_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/product_icon" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/sixteen_dp"
                    android:layout_toRightOf="@id/product_image"
                    android:orientation="vertical">

                    <com.midtrans.demo.widgets.DemoTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/product_name_sample"
                        android:textStyle="bold" />

                    <com.midtrans.demo.widgets.DemoTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/order_review_quantity" />
                </LinearLayout>

                <com.midtrans.demo.widgets.DemoTextView
                    android:id="@+id/product_price_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/product_price_sample"
                    android:textColor="@color/navy_blue.primary_dark"
                    android:textSize="10sp" />
            </RelativeLayout>

            <View
                android:id="@+id/divider_1"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@id/order_review_container"
                android:layout_marginBottom="@dimen/eight_dp"
                android:layout_marginTop="@dimen/eight_dp"
                android:background="@color/gray_divider" />

            <com.midtrans.demo.widgets.DemoTextView
                android:id="@+id/title_customer_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider_1"
                android:layout_marginLeft="@dimen/sixteen_dp"
                android:layout_marginRight="@dimen/sixteen_dp"
                android:layout_marginTop="@dimen/sixteen_dp"
                android:paddingBottom="@dimen/eight_dp"
                android:paddingTop="@dimen/eight_dp"
                android:text="@string/order_review_customer_details"
                android:textSize="10sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/customer_details_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_customer_details"
                android:layout_marginLeft="@dimen/sixteen_dp"
                android:layout_marginRight="@dimen/sixteen_dp"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:focusable="false"
                        android:hint="@string/order_review_customer_details_hint_name"
                        android:text="@string/order_review_customer_details_name"
                        android:textSize="16sp" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:focusable="false"
                        android:hint="@string/order_review_customer_details_hint_email"
                        android:text="@string/order_review_customer_details_email"
                        android:textSize="16sp" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:focusable="false"
                        android:hint="@string/order_review_customer_details_hint_phone"
                        android:text="@string/order_review_customer_details_phone"
                        android:textSize="16sp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <View
                android:id="@+id/divider_2"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@id/customer_details_container"
                android:layout_marginBottom="@dimen/eight_dp"
                android:layout_marginTop="@dimen/eight_dp"
                android:background="@color/gray_divider" />

            <com.midtrans.demo.widgets.DemoTextView
                android:id="@+id/title_delivery_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider_2"
                android:layout_marginLeft="@dimen/sixteen_dp"
                android:layout_marginRight="@dimen/sixteen_dp"
                android:layout_marginTop="@dimen/sixteen_dp"
                android:paddingBottom="@dimen/eight_dp"
                android:paddingTop="@dimen/eight_dp"
                android:text="@string/order_review_delivery_address"
                android:textSize="10sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/delivery_address_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_delivery_address"
                android:layout_marginBottom="@dimen/eight_dp"
                android:layout_marginLeft="@dimen/sixteen_dp"
                android:layout_marginRight="@dimen/sixteen_dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/eight_dp"
                    android:src="@drawable/address" />

                <com.midtrans.demo.widgets.DemoTextView
                    android:id="@+id/delivery_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/order_review_delivery_address_sample" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/two_dp"
        android:layout_above="@+id/btn_pay_container"
        android:background="@color/light_gray" />

    <include
        android:id="@+id/btn_pay_container"
        layout="@layout/layout_primary_button"/>
</RelativeLayout>