<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="center"
            android:src="@drawable/ic_cc_click" />

        <com.midtrans.demo.widgets.DemoTextView
            android:id="@+id/title_credit_card_type"
            style="@style/ConfigItemTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/credit_card_type_normal" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/credit_card_type_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/thirtytwo_dp"
        android:paddingRight="@dimen/thirtytwo_dp"
        android:visibility="gone">

        <com.midtrans.demo.widgets.DemoRadioButton
            android:id="@+id/type_credit_card_normal"
            style="@style/CustomRadioButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/eight_dp"
            android:layout_marginStart="@dimen/eight_dp"
            android:checked="true"
            android:gravity="center_vertical"
            android:text="@string/card_click_normal" />

        <com.midtrans.demo.widgets.DemoRadioButton
            android:id="@+id/type_credit_card_two_clicks"
            style="@style/CustomRadioButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/eight_dp"
            android:layout_marginStart="@dimen/eight_dp"
            android:gravity="center_vertical"
            android:text="@string/card_click_two_click" />

        <com.midtrans.demo.widgets.DemoRadioButton
            android:id="@+id/type_credit_card_one_click"
            style="@style/CustomRadioButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/eight_dp"
            android:layout_marginStart="@dimen/eight_dp"
            android:gravity="center_vertical"
            android:text="@string/card_click_one_click" />
    </RadioGroup>

</LinearLayout>